have error blog migrate

--- a/cook/templates/base.html
+++ b/cook/templates/base.html
@@ -212,6 +212,7 @@
     </header>
     <!-- Header Section End -->
 
+    {% block content %}
     <!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
@@ -747,6 +748,7 @@
         </div>
     </section>
     <!-- Categories Section End -->
+    {% endblock content %}
 
     <!-- Footer Section Begin -->
     <footer class="footer">
