have error slag food_vegan

--- a/cook/templates/blog/post_list.html
+++ b/cook/templates/blog/post_list.html
@@ -27,7 +27,7 @@
                                     </div>
                                     <div class="categories__post__item__text">
                                         <span class="post__label">{{ post.category }}</span>
-                                        <h3><a href="{% url %}">{{ post.title }}</a></h3>
+                                        <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
                                         <ul class="post__widget">
                                             <li>by <span>{{ post.author }}</span></li>
                                             <li>3 min read</li>
