--- a/cook/templates/blog/post_detail.html
+++ b/cook/templates/blog/post_detail.html
@@ -33,14 +33,14 @@
                     </ul>
                 </div>
                 <div class="single-post__top__text">
-                    <p>{{ post.text|slice:":250" }} </p>
+                    <p>{{ post.text|truncatewords:20 }} </p>
                 </div>
                 <div class="single-post__recipe__details">
                     <div class="single-post__recipe__details__option">
                         <ul>
                             <li>
                                 <h5><i class="fa fa-user-o"></i> SERVES</h5>
-                                <span>2 as a main, 4 as a side</span>
+                                <span>{{ post.recipe }}</span>
                             </li>
                             <li>
                                 <h5><i class="fa fa-clock-o"></i> PREP TIME</h5>
