--- a/cook/templates/blog/include/tags/top_nav.html
+++ b/cook/templates/blog/include/tags/top_nav.html
@@ -5,6 +5,6 @@
         {% get_last_posts %}
         {% get_categories %}
         <li><a href="./about.html">О нас</a></li>
-        <li><a href="./contact.html">Контакты</a></li>
+        <li><a href="{% url 'contact' %}">Контакты</a></li>
     </ul>
 </nav>
