--- a/cook/templates/blog/home.html
+++ b/cook/templates/blog/home.html
@@ -97,6 +97,7 @@
                         </div>
                     </div>
                 </div>
+                {% include 'blog/include/sidebar.html' %}
             </div>
         </div>
     </div>
