--- a/cook/templates/blog/post_detail.html
+++ b/cook/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load social_tags %}
 
 {% block content %}
 <!-- Single Post Section Begin -->
@@ -103,88 +104,55 @@
                         </div>
                     </div>
                 </div>
+                {% get_about as about %}
                 <div class="single-post__author__profile">
                     <div class="single-post__author__profile__pic">
-                        <img src="img/categories/single-post/author-profile.jpg" alt="">
+                        <img src="{{ about.get_first_image }}" alt="">
                     </div>
                     <div class="single-post__author__profile__text">
-                        <h4>Lena Mollein.</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h4>{{ about.name }}</h4>
+                        <p>{{ about.mini_text|safe }}</p>
                         <div class="single-post__author__profile__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
+                            {% get_social_links as social_links %}
+                            {% for item in social_links %}
+                            <a href="{{ item.link }}"><img src="{{ item.icon.url }}"></a>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
                 <div class="single-post__comment">
                     <div class="widget__title">
-                        <h4>03 Comment</h4>
+                        <h4>{{ post.get_comments.count }} Comment</h4>
                     </div>
+                    {% for comment in post.get_comments %}
                     <div class="single-post__comment__item">
                         <div class="single-post__comment__item__pic">
-                            <img src="img/categories/single-post/comment/comment-1.jpg" alt="">
+                            <img src="/static/img/categories/cat-2.jpg" alt="">
                         </div>
                         <div class="single-post__comment__item__text">
-                            <h5>Brandon Kelley</h5>
-                            <span>15 Aug 2017</span>
-                            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                                adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                                magnam.</p>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-heart-o"></i></a></li>
-                                <li><a href="#"><i class="fa fa-share-square-o"></i></a></li>
-                            </ul>
+                            <h5>{{ comment.name }}</h5>
+                            <span>{{ comment.create_at }}</span>
+                            <p>{{ comment.message }}</p>
                         </div>
                     </div>
-                    <div class="single-post__comment__item single-post__comment__item--reply">
-                        <div class="single-post__comment__item__pic">
-                            <img src="img/categories/single-post/comment/comment-2.jpg" alt="">
-                        </div>
-                        <div class="single-post__comment__item__text">
-                            <h5>Brandon Kelley</h5>
-                            <span>15 Aug 2017</span>
-                            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                                adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                                magnam.</p>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-heart-o"></i></a></li>
-                                <li><a href="#"><i class="fa fa-share-square-o"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="single-post__comment__item">
-                        <div class="single-post__comment__item__pic">
-                            <img src="img/categories/single-post/comment/comment-3.jpg" alt="">
-                        </div>
-                        <div class="single-post__comment__item__text">
-                            <h5>Brandon Kelley</h5>
-                            <span>15 Aug 2017</span>
-                            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                                adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                                magnam.</p>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-heart-o"></i></a></li>
-                                <li><a href="#"><i class="fa fa-share-square-o"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
                 <div class="single-post__leave__comment">
                     <div class="widget__title">
                         <h4>Leave a comment</h4>
                     </div>
-                    <form action="#">
+                    <form action="{% url 'create_comment' pk=post.id %}" method="post">
+                        {% csrf_token %}
                         <div class="input-list">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
+                            {{ form.name }}
+                            {{ form.email }}
+                            {{ form.website }}
+                            <!--                            <input type="text" placeholder="Name">-->
+                            <!--                            <input type="text" placeholder="Email">-->
+                            <!--                            <input type="text" placeholder="Website">-->
                         </div>
-                        <textarea placeholder="Message"></textarea>
+                        {{ form.message }}
+                        <!--                        <textarea placeholder="Message"></textarea>-->
                         <button type="submit" class="site-btn">Submit</button>
                     </form>
                 </div>
