--- a/cook/templates/header.html
+++ b/cook/templates/header.html
@@ -24,9 +24,6 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-3">
-                <div class="header__btn">
-                    <a href="./signin.html" class="primary-btn">Subscribe</a>
-                </div>
             </div>
             <div class="col-lg-6 col-md-6">
                 <div class="header__logo">
@@ -37,7 +34,7 @@
                 <div class="header__social">
                     {% get_social_links as social_links %}
                     {% for item in social_links %}
-                    <a href="{{ item.link }}"><img src="{{ item.icon.url }}"></a>
+                    <a href="{{ item.link }}"><img class="contact_icon" src="{{ item.icon.url }}"></a>
                     {% endfor %}
                 </div>
             </div>
