add gallery and finish project

--- a/cook/templates/blog/home.html
+++ b/cook/templates/blog/home.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-
+{% load gallery_tags %}
 
 {% block content %}
 <!-- Hero Section Begin -->
-
+    {% get_gallery %}
 <!-- Categories Section Begin -->
 <section class="categories spad">
     <div class="categories__post">
