--- a/cook/templates/blog/include/sidebar.html
+++ b/cook/templates/blog/include/sidebar.html
@@ -1,4 +1,7 @@
-{% load social_tags %}
+{% load social_tags cache %}
+
+
+{% cache 5000 sidebar %}
 <div class="col-lg-4 col-md-4">
     <div class="sidebar__item">
         <div class="sidebar__about__item">
@@ -28,7 +31,7 @@
                 <div class="sidebar__item__title">
                     <h6>Categories</h6>
                 </div>
-            {% include './sidebar_category.html' %}
+                {% include './sidebar_category.html' %}
             </div>
             <div class="sidebar__subscribe__item">
                 <div class="sidebar__item__title">
@@ -47,3 +50,4 @@
             </div>
         </div>
     </div>
+{% endcache %}
