--- a/cook/templates/footer.html
+++ b/cook/templates/footer.html
@@ -1,4 +1,6 @@
-{% load static social_tags %}
+{% load static social_tags cache %}
+
+{% cache 5000 footer %}
 
 <footer class="footer">
     <div class="container-fluid">
@@ -62,3 +64,4 @@
         </div>
     </div>
 </footer>
+{% endcache %}
