--- a/cook/templates/blog/include/left_nav.html
+++ b/cook/templates/blog/include/left_nav.html
@@ -1,4 +1,6 @@
-{% load menu_tags social_tags %}
+{% load menu_tags social_tags cache %}
+
+{% cache 5000 left_nav %}
 
 <div class="humberger__menu__overlay"></div>
 <div class="humberger__menu__wrapper">
@@ -44,3 +46,4 @@
         </form>
     </div>
 </div>
+{% endcache %}
