--- a/cook/templates/header.html
+++ b/cook/templates/header.html
@@ -1,6 +1,6 @@
-{% load social_tags %}
+{% load social_tags cache %}
 
-
+{% cache 5000 header %}
 <header class="header">
     <div class="header__top">
         <div class="container">
@@ -41,3 +41,4 @@
         </div>
     </div>
 </header>
+{% endcache %}
